[package]
name = "pktslow"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = {version="0.1.2", default-features=false}
anyhow = "1.0.31"
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.2"
argh = "0.1.3"
once_cell = "1.4.0"

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
